# parallel-automated-script

./: .gitignore  QUICKSTART.md  README.md  comprehensive_test.py  example_custom_run.py  pyproject.toml
parallel_ai_testing/: logger_config.py  main.py  parallel_client.py  prompt_generator.py  query_parser.py  result_saver.py
